# viggy-3d

./: .gitignore  Graph.py  README.md  car.json  main.py  main2.py  main3.py  requirements.txt  scene.json  setup.cfg  setup.py  test.py
backpack/: backpack.mtl
backpackgltf/: scene.gltf
samples/: example.py
src/viggy_3d/: Camera.py  Graph.py  InstancedVertexBuffer.py  Material.py  Mesh.py  Model.py  PointLight.py  Shader.py  SkyBox.py  Texture.py  colors.py
src/viggy_3d/GLTFImporter/: Accessor.py  Buffer.py  Image.py  Sampler.py
src/viggy_3d/Primitives/: vertexData.py
src/viggy_3d/shaders/mesh/: geometry.glsl
src/viggy_3d/shaders/model/: vertex.glsl
viggy/: Camera.py  Graph.py  IndexBuffer.py  InstancedVertexBuffer.py  Light.py  Material.py  Mesh.py  Model.py  PointLight.py  Shader.py  SkyBox.py  Texture.py  VertexBuffer.py  importer.py  vertexData.py
viggy/GLTFImporter/: Accessor.py  Buffer.py  BufferView.py  GLTFFile.py  GLTFObject.py  Image.py  Material.py  Mesh.py  Node.py  Primitive.py  Sampler.py  Scene.py  Texture.py  TextureInfo.py  __init__.py  errors.py
viggy/GLTFTools/: Accessor.py  Buffer.py  BufferView.py  GLTFFile.py  GLTFObject.py  Image.py  Material.py  Mesh.py  Node.py  Primitive.py  Sampler.py  Scene.py  Texture.py  TextureInfo.py  __init__.py  core.py
viggy/Primitives/: Cube.py
viggy/shaders/light/: fragment.gl  vertex.gl
viggy/shaders/mesh/: vertex.gl
viggy/shaders/model/: fragment.glsl
viggy/shaders/normal/: geometry.gl
viggy/shaders/object/: fragment.gl  vertex.glsl
viggy/shaders/sky_box/: fragment.gl  vertex.gl
(+2 files in other folders)
