[metadata]
name = viggy-3d
version = 1
author = Vignesh M Pai
author_email = vigneshpai2003@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vigneshpai2003/viggy-3d
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pillow
    PyGLM
    PyOpenGL
    PyOpenGL-accelerate
    PySide6

[options.packages.find]
where = src